@@ -1,3 +1,9 @@
+2001-02-14  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/html-utilities.scm (gnc:html-build-acct-table): Add
+	grouping of accounts according to their types and show their
+	subtotal. Major cleanup.
+
 2001-02-13  Bill Gribble  <grib@billgribble.com>
 
 	* src/engine/gnc-numeric.c: fix stupid. stupid. stupid. stupid 
